Fix PUG list display alignment issue

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/modules/_user_groups.scss
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/assets/sass/modules/_user_groups.scss
@@ -7,6 +7,8 @@
   display: flex;
   display: -webkit-flex;
   justify-content: space-between;
+  margin-bottom: 1em;
+  max-height: 7em;
 }
 
 .user-group-image {
